<resources>
    <string name="app_name">EmailApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="TEST3">TEST3</string>
    <string name="name">name:</string>
    <string name="enter_number">Enter number:</string>
    <string name="email">EMAIL</string>
    <string name="new_radio_button">New Radiobutton</string>
    <string name="title_activity_second">SecondActivity</string>
</resources>
